<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Travelme</string>
    <string name="authHeader">ImageLogo</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="dont_have_account">Do not have an account?\nClick here to sign up</string>
    <string name="name">name</string>
    <string name="signup">signup</string>
    <string name="already_have_account">Already have an account?\nClick here to login</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="search">SEARCH</string>
    <string name="like_button">Like</string>
    <string name="level_and_length">דרגת קושי: %1$s אורך: %2$s</string>
    <string name="time">זמן הליכה: %1$s</string>
    <string name="save">save</string>
    <string name="my_trips">my trips</string>
    <string name="logout">logout</string>
    <string name="search_level">find trips by level</string>
    <string name="search_description">find trips by description</string>
    <string name="search_trips">find trips</string>
    <string name="choose_level">Choose difficulty level:</string>
    <string name="add_trips">add new trip</string>
    <string name="trip_description">trip description</string>
    <string name="level">level:</string>
    <string name="length">length:</string>
    <string name="timeTitle">time:</string>
    <string name="title">title:</string>
    <string name="successfullyentered">You have successfully entered the new trip</string>


    <string-array name="Difficulty_selection">
        <item>קל</item>
        <item>בנוני</item>
        <item>קשה</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addtrip">Add New Trip</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>

</resources>