<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="64dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="gone"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        android:layout_marginTop="18dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/signupPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>