<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <!-- כפתור 7 -->
    <TextView
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableTop="@drawable/home"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="8sp" />

    <!-- כפתור 6 -->
    <TextView
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableTop="@drawable/profile"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="8sp" />

    <!-- כפתור 5 -->
    <TextView
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableTop="@drawable/search"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="8sp" />

</LinearLayout>